Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T4994049/DeprecatedYES.out
DeprecatedYES.java:12:10: compiler.warn.missing.deprecated.annotation
- compiler.err.warnings.and.werror
DeprecatedYES.java:18:10: compiler.warn.has.been.deprecated: foo(), A
1 error
2 warnings
